<resources>
    <string name="app_name">InternChat</string>
    <string name="email">Enter email</string>
    <string name="password">Enter Password</string>
    <string name="action_sign_in_short">Register</string>
    <string name="btn_forgot_password">Forgot Password</string>
    <string name="btn_link_to_login">Already registered. Login!</string>
    <string name="login">Sign In</string>
    <string name="btn_link_to_reset">Send Link</string>
    <string name="signOut">Sign Out</string>
    <string name="add_chat_room">Add</string>
    <string name="chat_room_name">Enter Chat room name</string>
    <string name="pwd_len_small">password should be atleast 5 characters long</string>
    <string name="email_empty">Please Enter email</string>
    <string name="not_valid_email">Enter valid email</string>
    <string name="pwd_empty">Enter password</string>
    <string name="login_fail">Authentication fail ! Check your email id and password</string>
    <string name="no_network">Check your network Connection</string>
    <string name="authFail">Authentication Fail</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to send you password reset instructions.</string>
    <string name="register">Register</string>
    <string name="resetPassword">Reset Account</string>
    <string name="users_lbl">Users</string>
    <string name="msg_empty">Enter a message to send</string>

</resources>
